# Relaxdays-Hackathon-2022-Order-Batching

./: Cargo.toml  README.MD  output1.json
src/: cli.rs  input.rs  main.rs  model.rs  output.rs
src/ga/: batches.rs  mod.rs  orders.rs
